--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "pdfjs-dist": "^2.16.105",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-slick": "^0.30.1",
     "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.12.1",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
