--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
+    "jspdf": "^2.5.1",
     "pdfjs-dist": "^2.16.105",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -23,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.1",
     "shortid": "^2.2.16",
+    "signature_pad": "^5.0.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.12.1",
     "swiper": "^11.0.6",
